5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4077/executions/1602_1015.log
== TEST (2019-03-23 16:22:58) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
int vetor[3]; // posicao 0 = menor valor, posicao 1 = valor médio, posicao 2 = maior valorint a, b c, i;printf( "Digite os valores de a, b e c: " );scanf( "%d", &a );scanf( "%d", &b );scanf( "%d", &c );// Ordena os 3 valores lidos dentro de um vetor.if( a >= b && a >= c ) {   vetor[0] = a;   if( b >= c ) {	  vetor[1] = b;	  vetor[2] = c;   } else {	  vetor[1] = c;	  vetor[2] = b;   }} else if ( b >= a && b >= c ) {   vetor[0] = b;   if( a >= c ) {	  vetor[1] = a;	  vetor[2] = c;   } else {	  vetor[1] = c;	  vetor[2] = a;   }} else {   vetor[0] = c;   if( a >= b ) {	  vetor[1] = a;	  vetor[2] = b;   } else {	  vetor[1] = b;	  vetor[2] = a;   }}printf( "Numeros em ordem crescente: " );for( i = 0; i < 3; i++ ) {	printf( "%d ", vetor[i]);}printf( "\nNumeros em ordem decrescente: " );for( i = 3; i >= 0; i-- ) {	printf("%d ", vetor[i]);}


-- ERROR:
File "XXXX", line 4
    int vetor[3]; // posicao 0 = menor valor, posicao 1 = valor médio, posicao 2 = maior valorint a, b c, i;printf( "Digite os valores de a, b e c: " );scanf( "%d", &a );scanf( "%d", &b );scanf( "%d", &c );// Ordena os 3 valores lidos dentro de um vetor.if( a >= b && a >= c ) {   vetor[0] = a;   if( b >= c ) {	  vetor[1] = b;	  vetor[2] = c;   } else {	  vetor[1] = c;	  vetor[2] = b;   }} else if ( b >= a && b >= c ) {   vetor[0] = b;   if( a >= c ) {	  vetor[1] = a;	  vetor[2] = c;   } else {	  vetor[1] = c;	  vetor[2] = a;   }} else {   vetor[0] = c;   if( a >= b ) {	  vetor[1] = a;	  vetor[2] = b;   } else {	  vetor[1] = b;	  vetor[2] = a;   }}printf( "Numeros em ordem crescente: " );for( i = 0; i < 3; i++ ) {	printf( "%d ", vetor[i]);}printf( "\nNumeros em ordem decrescente: " );for( i = 3; i >= 0; i-- ) {	printf("%d ", vetor[i]);}
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-24 19:10:04) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
a= int(input("primeiro numero"))

-- ERROR:
File "XXXX", line 4
    int vetor[3]; // posicao 0 = menor valor, posicao 1 = valor médio, posicao 2 = maior valorint a, b c, i;printf( "Digite os valores de a, b e c: " );scanf( "%d", &a );scanf( "%d", &b );scanf( "%d", &c );// Ordena os 3 valores lidos dentro de um vetor.if( a >= b && a >= c ) {   vetor[0] = a;   if( b >= c ) {	  vetor[1] = b;	  vetor[2] = c;   } else {	  vetor[1] = c;	  vetor[2] = b;   }} else if ( b >= a && b >= c ) {   vetor[0] = b;   if( a >= c ) {	  vetor[1] = a;	  vetor[2] = c;   } else {	  vetor[1] = c;	  vetor[2] = a;   }} else {   vetor[0] = c;   if( a >= b ) {	  vetor[1] = a;	  vetor[2] = b;   } else {	  vetor[1] = b;	  vetor[2] = a;   }}printf( "Numeros em ordem crescente: " );for( i = 0; i < 3; i++ ) {	printf( "%d ", vetor[i]);}printf( "\nNumeros em ordem decrescente: " );for( i = 3; i >= 0; i-- ) {	printf("%d ", vetor[i]);}
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-24 19:10:27) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
a= int(input("primeiro numero"))
b= int(input("segundo numero"))


-- ERROR:
File "XXXX", line 4
    int vetor[3]; // posicao 0 = menor valor, posicao 1 = valor médio, posicao 2 = maior valorint a, b c, i;printf( "Digite os valores de a, b e c: " );scanf( "%d", &a );scanf( "%d", &b );scanf( "%d", &c );// Ordena os 3 valores lidos dentro de um vetor.if( a >= b && a >= c ) {   vetor[0] = a;   if( b >= c ) {	  vetor[1] = b;	  vetor[2] = c;   } else {	  vetor[1] = c;	  vetor[2] = b;   }} else if ( b >= a && b >= c ) {   vetor[0] = b;   if( a >= c ) {	  vetor[1] = a;	  vetor[2] = c;   } else {	  vetor[1] = c;	  vetor[2] = a;   }} else {   vetor[0] = c;   if( a >= b ) {	  vetor[1] = a;	  vetor[2] = b;   } else {	  vetor[1] = b;	  vetor[2] = a;   }}printf( "Numeros em ordem crescente: " );for( i = 0; i < 3; i++ ) {	printf( "%d ", vetor[i]);}printf( "\nNumeros em ordem decrescente: " );for( i = 3; i >= 0; i-- ) {	printf("%d ", vetor[i]);}
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-24 19:11:08) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
a= int(input("primeiro numero"))
b= int(input("segundo numero"))
c= int(input("terceiro numero"))

-- ERROR:
File "XXXX", line 4
    int vetor[3]; // posicao 0 = menor valor, posicao 1 = valor médio, posicao 2 = maior valorint a, b c, i;printf( "Digite os valores de a, b e c: " );scanf( "%d", &a );scanf( "%d", &b );scanf( "%d", &c );// Ordena os 3 valores lidos dentro de um vetor.if( a >= b && a >= c ) {   vetor[0] = a;   if( b >= c ) {	  vetor[1] = b;	  vetor[2] = c;   } else {	  vetor[1] = c;	  vetor[2] = b;   }} else if ( b >= a && b >= c ) {   vetor[0] = b;   if( a >= c ) {	  vetor[1] = a;	  vetor[2] = c;   } else {	  vetor[1] = c;	  vetor[2] = a;   }} else {   vetor[0] = c;   if( a >= b ) {	  vetor[1] = a;	  vetor[2] = b;   } else {	  vetor[1] = b;	  vetor[2] = a;   }}printf( "Numeros em ordem crescente: " );for( i = 0; i < 3; i++ ) {	printf( "%d ", vetor[i]);}printf( "\nNumeros em ordem decrescente: " );for( i = 3; i >= 0; i-- ) {	printf("%d ", vetor[i]);}
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-24 19:12:23) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
a= int(input("primeiro numero"))
b= int(input("segundo numero"))
c= int(input("terceiro numero"))
minimo= min(a,b,c)
maximo= max(a,b,c)

-- ERROR:
File "XXXX", line 4
    int vetor[3]; // posicao 0 = menor valor, posicao 1 = valor médio, posicao 2 = maior valorint a, b c, i;printf( "Digite os valores de a, b e c: " );scanf( "%d", &a );scanf( "%d", &b );scanf( "%d", &c );// Ordena os 3 valores lidos dentro de um vetor.if( a >= b && a >= c ) {   vetor[0] = a;   if( b >= c ) {	  vetor[1] = b;	  vetor[2] = c;   } else {	  vetor[1] = c;	  vetor[2] = b;   }} else if ( b >= a && b >= c ) {   vetor[0] = b;   if( a >= c ) {	  vetor[1] = a;	  vetor[2] = c;   } else {	  vetor[1] = c;	  vetor[2] = a;   }} else {   vetor[0] = c;   if( a >= b ) {	  vetor[1] = a;	  vetor[2] = b;   } else {	  vetor[1] = b;	  vetor[2] = a;   }}printf( "Numeros em ordem crescente: " );for( i = 0; i < 3; i++ ) {	printf( "%d ", vetor[i]);}printf( "\nNumeros em ordem decrescente: " );for( i = 3; i >= 0; i-- ) {	printf("%d ", vetor[i]);}
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-24 19:17:31) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
a= int(input("primeiro numero"))
b= int(input("segundo numero"))
c= int(input("terceiro numero"))
minimo= min(a,b,c)
maximo= max(a,b,c)
print("o maior numero e"minimo)
print("o numero intermediario e"medio)

-- ERROR:
File "XXXX", line 9
    print("o maior numero e"minimo)
                                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-24 19:17:53) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
a= int(input("primeiro numero"))
b= int(input("segundo numero"))
c= int(input("terceiro numero"))
minimo= min(a,b,c)
maximo= max(a,b,c)
print("o maior numero e",minimo)
print("o numero intermediario e",medio)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    print("o numero intermediario e",medio)
NameError: name 'medio' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-24 19:18:48) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
a= int(input("primeiro numero"))
b= int(input("segundo numero"))
c= int(input("terceiro numero"))
minimo= min(a,b,c)
maximo= max(a,b,c)
print("o menor numero e",minimo)
print("o numero intermediario e",medio)
print("o maior numero e", maximo)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    print("o numero intermediario e",medio)
NameError: name 'medio' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-24 19:18:55) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
a= int(input("primeiro numero"))
b= int(input("segundo numero"))
c= int(input("terceiro numero"))
minimo= min(a,b,c)
maximo= max(a,b,c)
print("o menor numero e",minimo)
print("o numero intermediario e",medio)
print("o maior numero e", maximo)

-- EXECUTION TIME:
0.154357
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1602/1015/main.py", line 10, in <module>
    print("o numero intermediario e",medio)
NameError: name 'medio' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-24 19:19:07) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
a= int(input("primeiro numero"))
b= int(input("segundo numero"))
c= int(input("terceiro numero"))
minimo= min(a,b,c)
maximo= max(a,b,c)
print("o menor numero e",minimo)
print("o numero intermediario e",medio)
print("o maior numero e",maximo)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    print("o numero intermediario e",medio)
NameError: name 'medio' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-24 19:21:00) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
a= int(input("primeiro numero"))
b= int(input("segundo numero"))
c= int(input("terceiro numero"))
minimo= min(a,b,c)
maximo= max(a,b,c)
print("o menor numero e",minimo)
print("o numero intermediario e",medio)
print("o maior numero e",maximo)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    print("o numero intermediario e",medio)
NameError: name 'medio' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-24 19:21:18) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
a= int(input("primeiro numero"))
b= int(input("segundo numero"))
c= int(input("terceiro numero"))
minimo= min(a,b,c)
maximo= max(a,b,c)
print("o menor numero e",minimo)
print("o numero intermediario e",medio)
print("o maior numero e",maximo)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    print("o numero intermediario e",medio)
NameError: name 'medio' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-24 19:22:17) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
a= int(input("primeiro numero 1"))
b= int(input("segundo numero"))
c= int(input("terceiro numero"))
minimo= min(a,b,c)
maximo= max(a,b,c)
print("o menor numero e",minimo)
print("o numero intermediario e",medio)
print("o maior numero e",maximo)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    print("o numero intermediario e",medio)
NameError: name 'medio' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-24 19:22:29) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
a= int(input("primeiro numero 1"))
b= int(input("segundo numero"))
c= int(input("terceiro numero"))
minimo= min(a,b,c)
maximo= max(a,b,c)
print("o menor numero e",minimo)
print("o numero intermediario e",medio)
print("o maior numero e",maximo)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    print("o numero intermediario e",medio)
NameError: name 'medio' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-24 19:22:43) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
a= int(input("primeiro numero 1"))
b= int(input("segundo numero"))
c= int(input("terceiro numero"))
minimo= min(a,b,c)
maximo= max(a,b,c)
print("o menor numero e",minimo)
print("o numero intermediario e",medio)
print("o maior numero e",maximo)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    print("o numero intermediario e",medio)
NameError: name 'medio' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-24 19:26:18) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
a= int(input("primeiro numero:"))
b= int(input("segundo numero: "))
c= int(input("terceiro numero: "))
minimo= min(a,b,c)
maximo= max(a,b,c)
print("o menor numero e",minimo)
print("o numero intermediario e",medio)
print("o maior numero e",maximo)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    print("o numero intermediario e",medio)
NameError: name 'medio' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-24 19:26:44) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
a= int(input("primeiro numero:"))
b= int(input("segundo numero: "))
c= int(input("terceiro numero: "))
minimo= min(a,b,c)
maximo= max(a,b,c)
print("o menor numero e",minimo)
print("o numero intermediario e",medio)
print("o maior numero e",maximo)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    print("o numero intermediario e",medio)
NameError: name 'medio' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-24 19:26:53) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
a= int(input("primeiro numero:"))
b= int(input("segundo numero: "))
c= int(input("terceiro numero: "))
minimo= min(a,b,c)
maximo= max(a,b,c)
print("o menor numero e",minimo)
print("o numero intermediario e",medio)
print("o maior numero e",maximo)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    print("o numero intermediario e",medio)
NameError: name 'medio' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-24 19:29:08) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
a= int(input("primeiro numero:"))
b= int(input("segundo numero: "))
c= int(input("terceiro numero: "))
minimo= min(a,b,c)
maximo= max(a,b,c)
medio= (a + b + c) - maximo - minimo
print("o menor numero e",minimo)
print("o numero intermediario e",medio)
print("o maior numero e",maximo)

-- OUTPUT:
o menor numero e -2
o numero intermediario e 0
o maior numero e 10
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-24 19:29:28) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
a= int(input("primeiro numero:"))
b= int(input("segundo numero: "))
c= int(input("terceiro numero: "))
minimo= min(a,b,c)
maximo= max(a,b,c)
medio= (a + b + c) - maximo - minimo
print("o menor numero e",minimo)
print("o numero intermediario e",medio)
print("o maior numero e",maximo)

-- EXECUTION TIME:
0.208659
-- TEST CASE 1:
---- input:
10 -2 0
---- correct output:
-2 0 10
---- user output:
o menor numero e -2
o numero intermediario e 0
o maior numero e 10
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-24 19:30:08) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
a= int(input("primeiro numero:"))
b= int(input("segundo numero: "))
c= int(input("terceiro numero: "))
minimo= min(a,b,c)
maximo= max(a,b,c)
medio= (a + b + c) - maximo - minimo
print("o menor numero e",minimo)
print("o numero intermediario e",medio)
print("o maior numero e",maximo)

-- OUTPUT:
o menor numero e -2
o numero intermediario e 0
o maior numero e 10
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-24 19:30:54) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
a= int(input("primeiro numero:"))
b= int(input("segundo numero: "))
c= int(input("terceiro numero: "))
minimo= min(a,b,c)
maximo= max(a,b,c)
medio= (a + b + c) - maximo - minimo
print("o menor numero e",minimo)
print("o numero intermediario e",medio)
print("o maior numero e",maximo)

-- EXECUTION TIME:
0.144233
-- TEST CASE 1:
---- input:
10 -2 0
---- correct output:
-2 0 10
---- user output:
o menor numero e -2
o numero intermediario e 0
o maior numero e 10
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-24 19:32:13) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
a= int(input("primeiro numero:"))
b= int(input("segundo numero: "))
c= int(input("terceiro numero: "))
minimo= min(a,b,c)
maximo= max(a,b,c)
medio= (a + b + c) - maximo - minimo
print("o menor numero e",minimo)
print("o numero intermediario e",medio)
print("o maior numero e",maximo)

-- OUTPUT:
o menor numero e -2
o numero intermediario e 0
o maior numero e 10
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-24 19:32:36) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
a= int(input("primeiro numero:"))
b= int(input("segundo numero: "))
c= int(input("terceiro numero: "))
minimo= min(a,b,c)
maximo= max(a,b,c)
medio= (a + b + c) - maximo - minimo
print("o menor numero e",minimo)
print("o numero intermediario e",medio)
print("o maior numero e",maximo)

-- EXECUTION TIME:
0.157659
-- TEST CASE 1:
---- input:
10 -2 0
---- correct output:
-2 0 10
---- user output:
o menor numero e -2
o numero intermediario e 0
o maior numero e 10
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-24 20:43:10) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
a= int(input("6"))
b= int(input("2"))
c= int(input("4"))
minimo= min(a,b,c)
maximo= max(a,b,c)
medio= (a + b + c) - maximo - minimo
print("o menor numero e",minimo)
print("o numero intermediario e",medio)
print("o maior numero e",maximo)

-- OUTPUT:
o menor numero e -2
o numero intermediario e 0
o maior numero e 10
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-24 20:43:21) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
a= int(input("6"))
b= int(input("2"))
c= int(input("4"))
minimo= min(a,b,c)
maximo= max(a,b,c)
medio= (a + b + c) - maximo - minimo
print("o menor numero e",minimo)
print("o numero intermediario e",medio)
print("o maior numero e",maximo)

-- EXECUTION TIME:
0.145219
-- TEST CASE 1:
---- input:
10 -2 0
---- correct output:
-2 0 10
---- user output:
o menor numero e -2
o numero intermediario e 0
o maior numero e 10
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-24 20:45:43) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
a= int(input("6"))
b= int(input("2"))
c= int(input("4"))
minimo= min(a,b,c)
maximo= max(a,b,c)
medio= (a + b + c) - maximo - minimo
print(minimo)
print(medio)
print(maximo)

-- OUTPUT:
-2
0
10
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-24 20:45:48) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
a= int(input("6"))
b= int(input("2"))
c= int(input("4"))
minimo= min(a,b,c)
maximo= max(a,b,c)
medio= (a + b + c) - maximo - minimo
print(minimo)
print(medio)
print(maximo)

-- EXECUTION TIME:
0.1792
-- TEST CASE 1:
---- input:
10 -2 0
---- correct output:
-2 0 10
---- user output:
-2
0
10
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
